--- a/smartphones.css
+++ b/smartphones.css
@@ -117,35 +117,65 @@
   transform: scale(1.05);
 }
 
-/* Tablets*/
-@media screen and (max-width: 1024px) {
-  .nav-links {
-    gap: 2rem;
-  }
+/* Hamburger Menu */
+.hamburger {
+  display: none;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
+
+
+/*Tablets & Mobiles */
+@media screen and (max-width: 1024px) {
   .navbar {
     padding: 0.5rem 1.5rem;
+  }
+
+  .hamburger {
+    display: block;
+    margin-left: auto;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .nav-links.active {
+    right: 0;
   }
 
   .logo img {
     width: 40%;
   }
 
-
-
   .nav-links {
     position: absolute;
     top: 100%;
-    right: 0;
-    height: auto;
+    right: -100%;
+    height: 100vh;
     background: #0d1b2a;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    transition: transform 0.5s ease-in;
+    transition: right 0.5s ease-in;
     z-index: 99;
     padding: 2rem 0;
     gap: 1.5rem;
@@ -194,7 +224,7 @@
   }
 }
 
-/* Mobiles*/
+/*Viewing in Mobiles*/
 @media screen and (max-width: 480px) {
   .navbar {
     padding: 0.5rem 1rem;
@@ -261,6 +291,8 @@
     width: 100%;
   }
 }
+
+
 
 /*NAVIGATION BAR*/
 .navbar {
@@ -337,7 +369,6 @@
   color: #006aff;
 }
 
-/* Active dropdown (JS controlled) */
 .dropdown.active .dropdown-menu {
   display: block;
 }
